# DataElementMaps

./: .gitignore  README.md  aireadi2omop_redcap_valueset_mapping_2558.csv  auto_gen_concept_templates
AIREADi_OMOP_Vocabulary_Request/: template_4_adding_vocabulary-2 - concept_manual.csv  template_4_adding_vocabulary-2 - concept_relationship_manual.csv  template_4_adding_vocabulary-2 - vocabulary.csv  template_4_adding_vocabulary-2.xlsx
Custom_Concepts_Review/: Custom_Code_Master.csv  MoCA_Custom_Codes.csv  Redcap_Custom_Codes.csv  Vision_Custom_Codes.csv
auto_gen_concept_templates/: .env.example  CLAUDE.md  CLAUDE.old.md  README.md  autogen.py  pyproject.toml  validate.py  validation_report.md  validation_report_20250801_130753.md  validation_report_20250814_112748.md  validation_report_20250818_152435.md  validation_report_20250818_174540.md  validation_report_20250818_174944.md  validation_report_20250818_180549.md  validation_report_20250818_180937.md  validation_report_that_James_is_working_on.md
auto_gen_concept_templates/output/: MOCA_concept.csv  MOCA_concept_relationship.csv  MOCA_concept_relationship_manual.csv  RedCap_concept.csv  RedCap_concept_manual.csv  RedCap_concept_relationship.csv  RedCap_concept_relationship_manual.csv  concept.csv  concept_manual.csv  concept_relationship.csv  concept_relationship_manual.csv  tracking_info.json
data-dictionary/: 0100_2024-04-05_AIREADiPilot_OpenSource_PilotDataDictionary.csv  0101_2024-04-12_AIREADiPilot_OpenSource_PilotDataDictionary.csv  0102_2024-04-26_AIREADiPilot_OpenSource_PilotDataDictionary.csv  (+5 more)
(+118 files in other folders)
