[project]
name = "auto-gen-concept-templates"
version = "0.1.0"
description = "generating concept_manual and concept_relationship_manual from new concepts (20B+) in MOCA and RedCap mapping worksheets"
authors = [
    {name = "Sigfried Gold",email = "sigfried@sigfried.org"}
]
license = {text = "GPL3"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gspread (>=6.2.1,<7.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "gspread-dataframe (>=4.0.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
